test/bad/generators/print02.px

func f(): Char*Rat... def
    skip

print f()
